Fixed incorrect disambiguation of function pairs that appear in the #if/#else blocks of the same preprocessor conditional
Fixed incorrect generation of conditionals around code in #else blocks
Added support for (read: removal of) constexpr
Fixed disambiguation of default argument functions resulting in Ex functions with names that don't match their argument list (#11)
Reduced number of Ex functions (when trailing arguments are trivial to fill, e.g. flags = 0, an Ex functions is not waranted). (#10)
Split code_dom into multiple files for tidiness and refactored the modules a bit
Improved the header template system somewhat and added a header to all files (#18, #22)

--- v0.03

Added alignment for comment indentation
Added command line arguments
Renamed templates to make them easier to match with source files
Added struct forward declarations to metadata
Added ImVector_Construct() and ImVector_Destruct() helpers
Added typedefs to the metadata output
Added parsed versions of complex types to the metadata output
Added marking of internal API elements
Fixed line comments on preprocessor directives getting treated as part of the directive
Added better #define parsing
Added defines to metadata output
Tidied up directory structure a bit
Fixed metadata conditionals not getting generated correctly for else blocks
Fixed spelling of "preceding" in metadata
Removed help reference to processing imgui_internal.h for now in case it confuses people

--- v0.02

Removed some more ImVector functions that don't compile correctly due to the lack of operator== on certain types
Removed ImNewWrapper on newer ImGui versions
Made LogTextV() only get added on ImGui version that don't supply it themselves
Renamed IMGUI_API to CIMGUI_API
Added (void) to declarations of C functions with no arguments
Fixed field declarations not identifying the IMGUI_API prefix
Made self parameters on const functions be const