@@ -5,7 +5,17 @@ from src import code_dom
 # (for ease of programming, since C doesn't support default arguments)
 # functions_to_ignore contains a list of functions that should not have variants generated
 # function_prefixes_to_ignore contains a list of function prefixes that should not have variants generated
-def apply(dom_root, functions_to_ignore=[], function_prefixes_to_ignore=[]):
+# trivial_argument_types is a list of argument types that will not get defaulted where possible if the default is 0/null
+# trivial_argument_names is a list of argument names that will not get defaulted where possible if the default is 0/null
+def apply(dom_root,
+          functions_to_ignore=[],
+          function_prefixes_to_ignore=[],
+          trivial_argument_types=[],
+          trivial_argument_names=[]):
+
+    # Should functions with default arguments appear after the no-defaults ("ex") version of the function or before it?
+    add_defaulted_functions_before_ex = True
+
     for function in dom_root.list_all_children_of_type(code_dom.DOMFunctionDeclaration):
         # Ignore based on exact name match
         if function.name in functions_to_ignore:
@@ -43,20 +53,27 @@ def apply(dom_root, functions_to_ignore=[], function_prefixes_to_ignore=[]):
         if function.has_imstr_helper and not has_non_defaulted_imstr_args:
             continue
 
-        # If a function only has a zero-default flags argument, don't generate helpers for it
-        # (as passing an extra zero is trivial, and they clutter up the API)
-        if (num_args_with_defaults == 1) and \
-                ((function.arguments[num_args - 1].name == "flags") or
-                 (function.arguments[num_args - 1].name == "popup_flags")) and \
-                (function.arguments[num_args - 1].get_default_value() == '0'):
-            continue
+        # Check how many of the first default arguments are trivial, and leave those without a default even in the
+        # with-defaults function (rationale: there are many cases where flags/etc can be trivially specified without
+        # cluttering the API, and conversely having to use the Ex function with all arguments is overkill if only
+        # they need to be changed).
 
-        # Similarly, ignore any functions that take a single "ImGuiCond cond = 0" default argument
-        # (as passing an extra zero is trivial, and they clutter up the API)
-        if (num_args_with_defaults == 1) and \
-                (function.arguments[num_args - 1].arg_type.get_fully_qualified_name() == "ImGuiCond") and \
-                (function.arguments[num_args - 1].get_default_value() == '0'):
-            continue
+        for i in range(num_args - num_args_with_defaults, num_args):
+            # Only consider leaving arguments if they have a zero or null default
+            if (function.arguments[i].get_default_value() == '0') or \
+               (function.arguments[i].get_default_value() == 'NULL'):
+                if (function.arguments[i].name in trivial_argument_names) or \
+                   (function.arguments[i].arg_type.get_fully_qualified_name() in trivial_argument_types):
+                    # Reduce the number of arguments we will apply defaults to
+                    num_args_with_defaults -= 1
+                else:
+                    # Once a single argument we do intend to default has been found, we need to stop
+                    break
+            else:
+                break
+
+        if num_args_with_defaults == 0:
+            continue  # Nothing useful left to do
 
         # Clone the function and set the defaulted arguments
 
@@ -94,4 +111,11 @@ def apply(dom_root, functions_to_ignore=[], function_prefixes_to_ignore=[]):
 
         # Insert new function
 
-        function.parent.insert_after_child(function, [new_function])
+        if add_defaulted_functions_before_ex:
+            # When inserting before the Ex function, we need to move any pre-comments up onto ourselves
+            comments_to_move = function.pre_comments.copy()  # Copy to avoid altering the list as we iterate
+            new_function.attach_preceding_comments(comments_to_move)
+
+            function.parent.insert_before_child(function, [new_function])
+        else:
+            function.parent.insert_after_child(function, [new_function])
